# Python-Developer.-Professional-01_new_project

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.json  pyproject.toml
log_analyzer/: __init__.py  config.py  log_parser.py  main.py  report_generator.py  utils.py
tests/: test_config.py  test_log_parser.py  test_utils.py
