[project]
name = "log-analyzer"
version = "0.1.0"
description = "Log Analyzer"
authors = [
    {name = "Mihael",email = "mihail@shirshakov.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "structlog (>=25.2.0,<26.0.0)",
    "logger (>=1.4,<2.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
